# test-gnulib

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  main.c
