AC_PREREQ([2.68])
AC_CONFIG_MACRO_DIRS([m4])
AC_INIT([test_gnulib], [1.0.0], [support@pololu.com])
AM_INIT_AUTOMAKE([1.11 -Wall -Werror foreign])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_PROG_CC_STDC
gl_EARLY
gl_INIT
AC_CONFIG_FILES([Makefile src/Makefile lib/Makefile])
AC_OUTPUT
